--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-4.yml
@@ -105,6 +105,20 @@ notes:
       \lim_{x\to 4}f(x) = f(4).
       $$$$
     Annotations: ''
+- id: 1547147566422
+  media:
+  - path: ${file_dir}/images/02.4-03.jpg
+    name: CCAC-02.4-03.jpg
+  fields:
+    Front: |
+      CCAC 02.4 03:
+      (a) From the graph of $f$, state the numbers at which $f$ is discontinuous, and explain why.
+      (b) For each of the numbers stated in part (a), determine whether $f$ is continuous from the right, or from the left, or neither.
+      ![](CCAC-02.4-03.jpg)
+    Back: |
+      (a) $f(-4)$ is not defined, and $\lim_{x \to a} f(x)$ (for $a = -2,\ 2,\ 4$) does not exist.
+      (b) $-4$: neither; $-2$: left; $2$: right; $4$: right.
+    Annotations: ''
 - id: 1547147566881
   useMarkdownMathExt: false
   useMarkdown: pweave
