--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -97,6 +97,17 @@ notes:
     Back: |
       $1$
     Annotations: ''
+- id: 1547149264496
+  fields:
+    Front: |
+      CCAC 02.5 03e: For the function $f$ whose graph is given, state the following:
+      $$$$
+      \lim_{x \to -\infty} f(x)
+      $$$$
+      ![](CCAC-02.5-03.jpg)
+    Back: |
+      $2$
+    Annotations: ''
 - id: 1547149265157
   useMarkdown: pweave
   fields:
