--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -108,6 +108,14 @@ notes:
     Back: |
       $2$
     Annotations: ''
+- id: 1547149264597
+  fields:
+    Front: |
+      CCAC 02.5 03f: For the function $f$ whose graph is given, state the equations of the asymptotes.
+      ![](CCAC-02.5-03.jpg)
+    Back: |
+      $x = -1$, $x = 2$, $y = 1$; $y = 2$.
+    Annotations: ''
 - id: 1547149265157
   useMarkdown: pweave
   fields:
