--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -131,6 +131,23 @@ notes:
     Back: |
       ![](CCAC-02.5-05.jpg)
     Annotations: ''
+- id: 1547149264824
+  media:
+  - path: ${file_dir}/images/02.5-07.jpg
+    name: CCAC-02.5-07.jpg
+  fields:
+    Front: |
+      CCAC 02.5 07: Sketch the graph of an example of a function $f$ that satisfies all of the given conditions.
+      $$$$
+      \lim_{x \to 2} f(x) = -\infty, \\
+      \lim_{x \to \infty} f(x) = \infty, \\
+      \lim_{x \to -\infty} f(x) = 0, \\
+      \lim_{x \to 0^+} f(x) = \infty, \\
+      \lim_{x \to 0^-} f(x) = -\infty \\
+      $$$$
+    Back: |
+      ![](CCAC-02.5-07.jpg)
+    Annotations: ''
 - id: 1547149265157
   useMarkdown: pweave
   fields:
