--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-5.yml
@@ -148,6 +148,25 @@ notes:
     Back: |
       ![](CCAC-02.5-07.jpg)
     Annotations: ''
+- id: 1547149264971
+  media:
+  - path: ${file_dir}/images/02.5-09.jpg
+    name: CCAC-02.5-09.jpg
+  fields:
+    Front: |
+      CCAC 02.5 09: Sketch the graph of an example of a function $f$ that satisfies all of the given conditions.
+      $$$$
+      f(0) = 3,\\
+      \lim_{x \to 0^-} f(x) = 4, \\
+      \lim_{x \to 0^+} f(x) = 2, \\
+      \lim_{x \to -\infty} f(x) = -\infty, \\
+      \lim_{x \to 4^-} f(x) = -\infty, \\
+      \lim_{x \to 4^+} f(x) = \infty, \\
+      \lim_{x \to \infty} f(x) = 3
+      $$$$
+    Back: |
+      ![](CCAC-02.5-09.jpg)
+    Annotations: ''
 - id: 1547149265157
   useMarkdown: pweave
   fields:
