--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-7.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-7.yml
@@ -422,3 +422,51 @@ notes:
     Annotations: ''
   tags:
   - requiresCoding
+- id: 1547176078896
+  useMarkdown: pweave
+  fields:
+    Front: >
+      CCAC 02.7 47: If $f(x) = 2x^2 - x^3$, find $f'(x)$, $f''(x)$, $f'''(x)$, and
+      $f^{(4)}(x)$. Graph $f$, $f'$, $f''$, and $f'''$ on a common screen. Are the
+      graphs consistent with the geometric interpretations of these derivatives?
+    Back: |
+      $f'(x) = 4x - 3x^2$
+      $f''(x) = 4 - 6x$
+      $f'''(x) = -6$
+      $f^{(4)} = 0$
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import sympy as sy
+
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        2*x**2 - x**3,
+        4*x - 3*x**2,
+        4 - 6*x,
+        -6,
+        xlim = (-4, 6), ylim = (-7, 3),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False,
+      )
+      p[0].line_color = '#E18276'
+      # p[1].line_color = '#4A8EBD'
+
+      if hasattr(p, '_backend'): p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+      p._backend.process_series()
+
+      ax.text(-1.2, 2, "$f$")
+      ax.text(-0.9, -3, "$f'$")
+      ax.text(0.4, 2.5, "$f''$")
+      ax.text(4, -5.6, "$f'''$")
+      p._backend.plt.show()
+      ```
+    Annotations: ''
+  tags:
+  - requiresCoding
