--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-7.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-7.yml
@@ -480,3 +480,53 @@ notes:
     Back: |
       (a) $\frac{1}{3}a^{-2/3}$
     Annotations: ''
+- id: 1547176082746
+  useMarkdown: pweave
+  fields:
+    Front: |
+      CCAC 02.7 51: Show that the function $f(x) = |x - 6|$ is not differentiable at $6$. Find a formula for $f'$, and sketch its graph.
+    Back: |
+      $$
+      f'(x) =
+      \begin{cases}
+        -1 & \text{if $x < 6$} \\
+        1 & \text{if $x > 6$} \\
+      \end{cases}
+      $$
+      or
+      $$
+      f'(x) = \frac{x - 6}{|x - 6|}
+      $$
+      ```{python echo = False}
+      import matplotlib.pyplot as plt
+      import sympy as sy
+
+      import math
+
+      plt.rc('text', usetex = True)
+      plt.rc('font', family = 'serif')
+
+      x = sy.symbols('x')
+      p = sy.plot(
+        (-1, (x, -3, 6)),
+        (1, (x, 6, 9)),
+        xlabel = '$x$', ylabel = '$y$',
+        show = False,
+      )
+
+      if hasattr(p, '_backend'): p._backend.close()
+      p._backend = p.backend(p)
+      fg, ax = p._backend.fig, p._backend.ax
+      p._backend.process_series()
+      ax.set_xlim(-3, 9)
+      ax.set_ylim(-1.5, 1.5)
+      ax.set_xticks([0, 6])
+      ax.set_yticks([-1, 0, 1])
+      ax.plot(6, -1, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.plot(6, 1, 'ko', markerfacecolor = 'white', markersize = 5)
+      ax.text(7.5, 1.15, "$f'$")
+      p._backend.plt.show()
+      ```
+    Annotations: ''
+  tags:
+  - requiresCoding
