--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-7.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-7.yml
@@ -530,3 +530,14 @@ notes:
     Annotations: ''
   tags:
   - requiresCoding
+- id: 1547176084621
+  fields:
+    Front: >
+      CCAC 02.7 55: Let $l$ be the tangent line to the parabola $y = x^2$ at the point
+      $(1,1)$. The _angle of inclination_ of $l$ is the angle $\phi$ that $l$ makes
+      with the positive direction of the $x$-axis. Calculate $\phi$ correct to the
+      nearest degree.
+    Back: |
+      $63^\circ$
+    Annotations: ''
+  tags: []
