--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
@@ -29,3 +29,22 @@ notes:
       (c)
       ![](CCAC-02.8-01.2.jpg)
     Annotations: ''
+- id: 1547213340846
+  media:
+  - path: ${file_dir}/images/02.8-03.1.jpg
+    name: CCAC-02.8-03.1.jpg
+  - path: ${file_dir}/images/02.8-03.2.jpg
+    name: CCAC-02.8-03.2.jpg
+  fields:
+    Front: |
+      CCAC 02.8 03: The graph of the derivative $f'$ of a function $f$ is shown.
+      (a) On what intervals is $f$ increasing? Decreasing?
+      (b) At what values of $x$ does $f$ have a local maximum? Local minimum?
+      (c) If it is known that $f(0) = 0$, sketch a possible graph of $f$.
+      ![](CCAC-02.8-03.1.jpg)
+    Back: |
+      (a) Increasing on $(-2, -1)$, $(0,1)$, $(2,3)$. Decreasing on $(-1,0)$, $(1,2)$.
+      (b) Local maximum at $x = -1,\ 1$. Local minimum at $x = 0,\ 2$.
+      (c)
+      ![](CCAC-02.8-03.2.jpg)
+    Annotations: ''
