--- a/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
+++ b/Math/Textbooks/Calculus/Calculus-ConceptsAndContexts/02-8.yml
@@ -48,3 +48,14 @@ notes:
       (c)
       ![](CCAC-02.8-03.2.jpg)
     Annotations: ''
+- id: 1547213341021
+  media:
+  - path: ${file_dir}/images/02.8-05.1.jpg
+    name: CCAC-02.8-05.1.jpg
+  fields:
+    Front: |
+      CCAC 02.8 05: Use the given graph of $f$ to estimate the intervals on which the derivative $f'$ is increasing or decreasing.
+      ![](CCAC-02.8-05.1.jpg)
+    Back: |
+      Increasing on $(2,5)$. Decreasing on $(-\infty, 2)$ and $(5, \infty)$.
+    Annotations: ''
